Fix bug overflow title & flex behaviour benefit

--- a/public/nemolab/member/css/home.css
+++ b/public/nemolab/member/css/home.css
@@ -10,6 +10,14 @@
     --subtitle-size: 1rem;
 }
 
+@media(max-width:992px)
+{
+    html
+    {
+        font-size: 75%;
+    }
+}
+
 @media(max-width:512px)
 {
     html
@@ -187,13 +195,23 @@ main p
 #section-hero-img .row
 {
     margin-top: -4rem;
+
+    #text-hero
+    {
+        margin-top: -4rem;
+    }
 }
 
-@media(max-width:768px)
+@media(max-height:540px)
 {
     #section-hero-img .row
     {
         margin-top: 0px;
+
+        #text-hero
+        {
+            margin-top: 0;
+        }
     }
 }
 
@@ -1202,13 +1220,10 @@ main p
     }
 }
 
-@media(max-width: 512px)
+#section-benefit-kelas .values-grid .value .icon>svg
 {
-    #section-benefit-kelas .values-grid .value .icon > svg
-    {
-        width: 3rem;
-        height: 4.5rem;
-    }
+    width: 3rem;
+    height: 4.5rem;
 }
 
 .check-active-group
@@ -1249,16 +1264,15 @@ main p
     gap: 8px;
 }
 
-@media screen and (max-width: 1200px)
+@media screen and (max-width: 992px)
 {
     #section-benefit-kelas .container-fluid .row
     {
-        flex-direction: column-reverse;
-        gap: 4rem;
+        flex-wrap: nowrap;
     }
 }
 
-@media screen and (max-width: 900px)
+@media screen and (max-width: 992px)
 {
     .person-image
     {
@@ -1509,7 +1523,9 @@ main p
     font-size: .875rem;
     color: var(--text-color-second);
 }
-@media (max-width: 512px){
+
+@media (max-width: 512px)
+{
 
     #section-pusat-bantuan p
     {
@@ -1517,6 +1533,7 @@ main p
         color: var(--text-color-second);
     }
 }
+
 #section-pusat-bantuan img
 {
     width: 100%;
